--- a/style.css
+++ b/style.css
@@ -1,16 +1,47 @@
+html *
+{
+   font-family: Helvetica, Arial, sans-serif;
+}
+
+h4 {
+    font-weight: normal;
+    color: rgb(70, 70, 70);
+    margin: 8px 0;
+}
+
+h3 {
+    margin: 5px 0;
+}
+
+li {
+    margin: 18px 0;
+}
+
+button {
+    font-size: medium;
+    padding: 7px 14px;
+    background-color:rgb(250, 250, 250);
+    border-radius: 4px;
+    border-width: 0px;
+    box-shadow: 0 0 1px 1px rgb(189, 189, 189);
+}
+
 body {
-    background-color: rgb(242, 246, 250);
-    margin: 100px 100px 100px 100px;
+    background-color: rgb(246, 248, 250);
+    margin: 100px;
 }
 
 .container {
     background-color: white;
-    padding: 15px 15px 15px 15px;
-    margin: 10px 10px 10px 10px;
+    padding: 20px;
+    margin: 10px;
+    border-radius: 4px;
+    box-shadow: 0 1px 3px 1px rgb(207, 207, 207);
 }
 
 .inline {
     width: 50%;
+    height: 100%;
 }
 
 .flex-box {
@@ -23,7 +54,7 @@ body {
     content: "\f002";
     position: absolute;
     top: 8px;
-    left: 8px;
+    left: 13px;
 }
 
 #searchform {
@@ -33,6 +64,9 @@ body {
 }
 
 #searchbar {
-    padding: 8px 8px 8px 25px;
+    padding: 8px 8px 10px 35px;
     width: 100%;
+    border-width: 0;
+    border-radius: 4px;
+    box-shadow: inset 0 0 2px 1px rgb(206, 206, 206);
 }
